METAMODEL-1158: Added handling for data sources that don't validate
